C++ Project/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:06:01 **** Rebuild of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o caseStudy1.o "..\\caseStudy1.cpp" 
g++ -o CaseStudy1.exe caseStudy1.o 
15:06:03 **** Rebuild of configuration Debug for project test ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.cpp" 
g++ -o test.exe "src\\test.o" 
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy1
Info: Nothing to build for CaseStudy1
15:10:49 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.cpp" 
g++ -o test.exe "src\\test.o" 
Info: Nothing to build for CaseStudy1
15:25:06 **** Incremental Build of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o no2.o "..\\no2.cpp" 
..\no2.cpp:11:27: warning: missing terminating " character [enabled by default]
   cout << "Case #<<i++<<"."<<c<<endl;
                           ^
..\no2.cpp:11:3: error: missing terminating " character
   cout << "Case #<<i++<<"."<<c<<endl;
   ^
..\no2.cpp: In function 'int main()':
..\no2.cpp:12:3: error: request for member 'cin' in '"Case #<<i++<<"', which is of non-class type 'const char [14]'
   cin>>n
   ^
..\no2.cpp:13:2: error: expected ';' before '}' token
  }
  ^
..\no2.cpp:6:7: warning: unused variable 'i' [-Wunused-variable]
   int i =1;
       ^
15:29:59 **** Incremental Build of configuration Debug for project CaseStudy1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o no2.o "..\\no2.cpp" 
g++ -o CaseStudy1.exe no2.o caseStudy1.o 
caseStudy1.o: In function `main':
C:\My Files\AFRIZAL\CaseStudy1\Debug/../caseStudy1.cpp:4: multiple definition of `main'
no2.o:C:\My Files\C++ Project\CaseStudy1\Debug/../no2.cpp:4: first defined here
collect2.exe: error: ld returned 1 exit status
15:29:59 **** Rebuild of configuration Debug for project CaseStudy2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o caseStudy2.o "..\\caseStudy2.cpp" 
g++ -o CaseStudy2.exe caseStudy2.o 
Info: Nothing to build for CaseStudy2
Info: Nothing to build for CaseStudy2
